--- a/templates/base.html
+++ b/templates/base.html
@@ -16,40 +16,35 @@
 <!-- 네비게이션바 -->
 <nav class="container">
     <div class="justify-content-around align-items-center row pb-3">
-      <a href="./home/Home.html" class="col-md-2 col-3"> <img src="{% static './image/LOGO.png' %}" style="width:100%" class="navbar-brand"> </a>
+
+      <a href="http://127.0.0.1:8000/" class="col-md-2 col-3"> <img src="{% static './image/LOGO.png' %}" style="width:100%" class="navbar-brand"> </a>
       <form class="d-flex align-items-center col-5">
         <span class="material-icons search-icon">search</span>
         <input class="form-control me-2 search-box" type="search" aria-label="Search">
       </form>
-      <!--<a class="login-link active col-md-2 col-3" aria-current="page" href="http://127.0.0.1:8000/common/login">
-        로그인 </a>           -->
+        <!-- <a class="login-link active col-md-2 col-3" aria-current="page" href="http://127.0.0.1:8000/common/login">
+        로그인 </a>   -->       
+      
+          {% if user.is_authenticated %}
+          <a class="col-md-2 col-3" style="color:black; text-align:center;" href="http://127.0.0.1:8000/common/logout">{{ user.username }} (로그아웃)</a>
+          {% else %}
+          <a class="col-md-2 col-3" style="color:black; text-align:center;" href="http://127.0.0.1:8000/common/login">로그인</a>
+          {% endif %}
+      
+          {% if not user.is_authenticated %}
+          <a class="col-md-2 col-3" style="color:black; text-align:center" href="http://127.0.0.1:8000/common/signup">회원가입</a>
+          {% endif %}
+       
+            
+    </div>
 
-    </div>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                {% if user.is_authenticated %}
-                <a class="nav-link" href="{% static '../common:logout' %}">{{ user.username }} (로그아웃)</a>
-                {% else %}
-                <a class="nav-link" href="{% static '../common:login' %}">로그인</a>
-                {% endif %}
-            </li>
-            <li>
-                {% if not user.is_authenticated %}
-                <a class="nav-link" href="{% url 'common:signup' %}">회원가입</a>
-                {% endif %}
-            </li>
-        </ul>
-    </div>
-        
-        
-    
     <div class="d-flex justify-content-around aling-items-center mx-auto home-nav py-2">
         <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/"> HOME </a>                
         <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/pybo/list"> 모이젠 게시판 </a>                
-        <a class="nav-link active" aria-current="page" href="./mypage/mypage.html"> 마이페이지 </a>                
+        <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/mypage/mypage.html"> 마이페이지 </a>                
     </div>
   </nav>
+        
 <!-- 기본 템플릿 안에 삽입될 내용 Start -->
 {% block content %}
 {% endblock %}
