--- a/templates/pybo/moizen(2)/index.html
+++ b/templates/pybo/moizen(2)/index.html
@@ -35,6 +35,7 @@
   <body>
     <nav class="container">
       <div class="justify-content-around align-items-center row pb-3">
+
         <a href="http://127.0.0.1:8000/" class="col-md-2 col-3"> <img src="{% static './image/LOGO.png' %}" style="width:100%" class="navbar-brand"> </a>
         <form class="d-flex align-items-center col-5">
           <span class="material-icons search-icon">search</span>
@@ -42,30 +43,24 @@
         </form>
           <!-- <a class="login-link active col-md-2 col-3" aria-current="page" href="http://127.0.0.1:8000/common/login">
           로그인 </a>   -->       
-
-          <div class="collapse navbar-collapse"  id="navbarSupportedContent" style="width:50%">
-            
-                <a class="nav-item">
-                    {% if user.is_authenticated %}
-                    <a class="nav-link" style="color:black" href="http://127.0.0.1:8000/common/logout">{{ user.username }} (로그아웃)</a>
-                    {% else %}
-                    <a class="nav-link" style="color:black" href="http://127.0.0.1:8000/common/login">로그인</a>
-                    {% endif %}
-                </a>
-                <a>
-                    {% if not user.is_authenticated %}
-                    <a class="nav-link" style="color:black" href="http://127.0.0.1:8000/common/signup">회원가입</a>
-                    {% endif %}
-                </a> 
-              
-              
-              </div>
         
+            {% if user.is_authenticated %}
+            <a class="col-md-2 col-3" style="color:black; text-align:center;" href="http://127.0.0.1:8000/common/logout">{{ user.username }} (로그아웃)</a>
+            {% else %}
+            <a class="col-md-2 col-3" style="color:black; text-align:center;" href="http://127.0.0.1:8000/common/login">로그인</a>
+            {% endif %}
+        
+            {% if not user.is_authenticated %}
+            <a class="col-md-2 col-3" style="color:black; text-align:center" href="http://127.0.0.1:8000/common/signup">회원가입</a>
+            {% endif %}
+         
+              
       </div>
+
       <div class="d-flex justify-content-around aling-items-center mx-auto home-nav py-2">
           <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/"> HOME </a>                
           <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/pybo/list"> 모이젠 게시판 </a>                
-          <a class="nav-link active" aria-current="page" href="./mypage/mypage.html"> 마이페이지 </a>                
+          <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/mypage/mypage.html"> 마이페이지 </a>                
       </div>
     </nav>
 
