--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,31 +1,64 @@
 {% load static %}
+<!doctype html>
+<html lang="ko">
+    <head>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+        <!-- pybo CSS -->
+        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+        <title>Hello, pybo!</title>
+    </head>
+<body>
 <!-- 네비게이션바 -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-    <div class="container-fluid">
-        <a href="{% url 'pybo:index' %}" class="col-md-2 col-3"> <img src="{% static '/image/LOGO.png' %}" style="width:50%" class="navbar-brand"></a>
-        <button class="navbar-toggler" type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    {% if user.is_authenticated %}
-                    <a class="nav-link" href="{% url 'common:logout' %}">{{ user.username }} (로그아웃)</a>
-                    {% else %}
-                    <a class="nav-link" href="{% url 'common:login' %}">로그인</a>
-                    {% endif %}
-                </li>
-                <li>
-                    {% if not user.is_authenticated %}
-                    <a class="nav-link" href="{% url 'common:signup' %}">회원가입</a>
-                    {% endif %}
-                </li>
-            </ul>
-        </div>
+<nav class="container">
+    <div class="justify-content-around align-items-center row pb-3">
+
+      <a href="http://127.0.0.1:8000/" class="col-md-2 col-3"> <img src="{% static './image/LOGO.png' %}" style="width:100%" class="navbar-brand"> </a>
+      <form class="d-flex align-items-center col-5">
+        <span class="material-icons search-icon">search</span>
+        <input class="form-control me-2 search-box" type="search" aria-label="Search">
+      </form>
+        <!-- <a class="login-link active col-md-2 col-3" aria-current="page" href="http://127.0.0.1:8000/common/login">
+        로그인 </a>   -->       
+      
+          {% if user.is_authenticated %}
+          <a class="col-md-2 col-3" style="color:black; text-align:center;" href="http://127.0.0.1:8000/common/logout">{{ user.username }} (로그아웃)</a>
+          {% else %}
+          <a class="col-md-2 col-3" style="color:black; text-align:center;" href="http://127.0.0.1:8000/common/login">로그인</a>
+          {% endif %}
+      
+          {% if not user.is_authenticated %}
+          <a class="col-md-2 col-3" style="color:black; text-align:center" href="http://127.0.0.1:8000/common/signup">회원가입</a>
+          {% endif %}
+       
+            
     </div>
-</nav>
+
+    <div class="d-flex justify-content-around aling-items-center mx-auto home-nav py-2">
+        <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/"> HOME </a>                
+        <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/pybo/list"> 모이젠 게시판 </a>
+        {% if user.is_authenticated %}      
+        <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/pybo/mypage"> 마이페이지 </a>
+        {% else%}
+        <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/common/login"> 마이페이지 </a>
+        {% endif %}
+
+    </div>
+  </nav>
+        
+<!-- 기본 템플릿 안에 삽입될 내용 Start -->
+{% block content %}
+{% endblock %}
+<!-- 기본 템플릿 안에 삽입될 내용 End -->
+<!-- Bootstrap JS -->
+<script src="{% static 'bootstrap.min.js' %}"></script>
+<!-- 자바스크립트 Start -->
+{% block script %}
+{% endblock %}
+<!-- 자바스크립트 End -->
+</body>
+</html>
