--- a/templates/pybo/moizen(2)/index.html
+++ b/templates/pybo/moizen(2)/index.html
@@ -60,7 +60,11 @@
       <div class="d-flex justify-content-around aling-items-center mx-auto home-nav py-2">
           <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/"> HOME </a>                
           <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/pybo/list"> 모이젠 게시판 </a>                
-          <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/mypage/mypage.html"> 마이페이지 </a>                
+          {% if user.is_authenticated %}      
+          <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/pybo/mypage"> 마이페이지 </a>
+          {% else%}
+          <a class="nav-link active" aria-current="page" href="http://127.0.0.1:8000/common/login"> 마이페이지 </a>
+          {% endif %}              
       </div>
     </nav>
 
